--- a/Presentation/项目介绍.md
+++ b/Presentation/项目介绍.md
@@ -1,5 +1,12 @@
 # 操作说明
 
-> AD 左右移动
+>A D  控制人物左右移动
 >
-> 左右 旋转重力
+>E    发动人物特殊能力
+>
+>空格  控制人物跳跃/与NPC进行对话
+>
+>左箭头  重力顺时针旋转90°
+>
+>右箭头  重力逆时针旋转90°
+
