--- a/Presentation/项目介绍.md
+++ b/Presentation/项目介绍.md
@@ -1,12 +1,10 @@
 # 操作说明
 
->A D  控制人物左右移动
->
->E    发动人物特殊能力
->
->空格  控制人物跳跃/与NPC进行对话
->
->左箭头  重力顺时针旋转90°
->
->右箭头  重力逆时针旋转90°
 
+>跳跃/与NPC进行对话       (键盘：空格或手柄：A）
+>
+>左右移动                (键盘：AD或手柄：左摇杆）
+>
+>增大物体重力            （键盘：E或手柄：X）
+>
+>旋转重力方向            （键盘：左右方向键或手柄LB，RB）
