--- a/markdown/3.md
+++ b/markdown/3.md
@@ -1,3 +1,28 @@
 # demo v0.13版本
 
 ![Seeder Logo](../Logo.png)
+
+
+    import os
+    import c4d
+    from c4d import documents
+
+    def main():
+        
+        doc = documents.GetActiveDocument()
+        path = doc.GetDocumentPath()
+        name = doc.GetDocumentName()
+
+        if name[-3:] != "fbx":
+            name = name[:-3]+"fbx"
+            print "convert filetype to .fbx"
+        
+        path = os.path.join(path,name)
+        if documents.SaveDocument(doc,path,c4d.SAVEDOCUMENTFLAGS_DONTADDTORECENTLIST,1026370): #Exports using the FBX exporter
+            print "export document to: " + path
+        else:
+            print "export failed"
+
+        c4d.EventAdd() 
+    if __name__=='__main__':
+        main()
