--- a/markdown/3.md
+++ b/markdown/3.md
@@ -2,7 +2,7 @@
 
 ![Seeder Logo](../Logo.png)
 
-
+'''python
     import os
     import c4d
     from c4d import documents
@@ -26,3 +26,4 @@
         c4d.EventAdd() 
     if __name__=='__main__':
         main()
+'''
