--- a/markdown/3.md
+++ b/markdown/3.md
@@ -2,23 +2,51 @@
 
 ![Seeder Logo](../Logo.png)
 
-'''python
+在连续工作四十个小时之后，算是把demo版做好并“准时”（赶在deadline之前）提交了。
+嘛，在睡了一天之后又是元气满满了，感觉是要出去浪一下了。
+
+
+> ~~demo版本的下载地址：~~
+>
+> ~~[Seeder Demo V0.13](http://pan.baidu.com/s/1kVx95Dt)~~
+>
+> ~~不推荐任何健全人类下载试玩~~
+>
+> ~~只编译了win32的版本~~
+>
+> ~~完成度低操作反人类且有大量暴力元素~~
+>
+>
+> ~~解压密码：fracgames~~
+>
+> ~~操作说明：无~~
+>
+>~~什么，你不知道按哪个键？一个个试过去吧~~
+
+### 让人幸福感爆棚的一段代码：
+
+虽然是很简单的几句，没什么复杂的东西，实现的功能也仅仅是“保存文件”而已，但绑定到快捷键上之后，会让人产生一种Cinema4d与Unity无缝协作的感觉。~~虽然Unity兼容c4d的文件格式，但团队合作用c4d的格式果然还是不太方便。~~
+```python
+    '''
+    将脚本绑定到快捷键（如ctrl+shift+alt+S），快速导出模型到原文件夹并覆盖保存。
+    '''
     import os
     import c4d
     from c4d import documents
 
     def main():
-        
+        # 获取文件路径与文件名    
         doc = documents.GetActiveDocument()
         path = doc.GetDocumentPath()
         name = doc.GetDocumentName()
-
+        # 将文件后缀改为.fbx
         if name[-3:] != "fbx":
             name = name[:-3]+"fbx"
             print "convert filetype to .fbx"
         
         path = os.path.join(path,name)
-        if documents.SaveDocument(doc,path,c4d.SAVEDOCUMENTFLAGS_DONTADDTORECENTLIST,1026370): #Exports using the FBX exporter
+        # 导出模型
+        if documents.SaveDocument(doc,path,c4d.SAVEDOCUMENTFLAGS_DONTADDTORECENTLIST,1026370):
             print "export document to: " + path
         else:
             print "export failed"
@@ -26,4 +54,4 @@
         c4d.EventAdd() 
     if __name__=='__main__':
         main()
-'''
+```
