--- a/markdown/3.md
+++ b/markdown/3.md
@@ -2,7 +2,7 @@
 
 ![Seeder Logo](../Logo.png)
 
-在连续工作四十个小时之后，算是把demo版做好并“准时”（赶在deadline之前）提交了。
+在连续工作四十个小时之后，算是把demo版做好并“准时”(~~赶在deadline之前~~)提交了。
 嘛，在睡了一天之后又是元气满满了，感觉是要出去浪一下了。
 
 
@@ -21,37 +21,48 @@
 >
 > ~~操作说明：无~~
 >
->~~什么，你不知道按哪个键？一个个试过去吧~~
+> ~~什么，你不知道按哪个键？一个个试过去吧~~
 
-### 让人幸福感爆棚的一段代码：
+#### ~~令人感觉幸福的一段代码：~~
 
-虽然是很简单的几句，没什么复杂的东西，实现的功能也仅仅是“保存文件”而已，但绑定到快捷键上之后，会让人产生一种Cinema4d与Unity无缝协作的感觉。~~虽然Unity兼容c4d的文件格式，但团队合作用c4d的格式果然还是不太方便。~~
+> 虽然是很简单的几句，没什么复杂的东西，实现的功能也仅仅是“保存文件”而已，但绑定到快捷键上之后，会让人产生一种Cinema4d与Unity无缝协作的感觉。~~虽然Unity兼容c4d的文件格式，但团队合作用c4d的格式果然还是不太方便。~~
+
 ```python
-    '''
-    将脚本绑定到快捷键（如ctrl+shift+alt+S），快速导出模型到原文件夹并覆盖保存。
-    '''
-    import os
-    import c4d
-    from c4d import documents
+# -*- coding: utf-8 -*-
+'''
+将脚本绑定到快捷键（如ctrl+shift+alt+S），快速导出模型到原文件夹并覆盖原文件保存。
+'''
+import os
+import c4d
+from c4d import documents
 
-    def main():
-        # 获取文件路径与文件名    
-        doc = documents.GetActiveDocument()
-        path = doc.GetDocumentPath()
-        name = doc.GetDocumentName()
-        # 将文件后缀改为.fbx
-        if name[-3:] != "fbx":
-            name = name[:-3]+"fbx"
+def main():
+    # 获取文件路径与文件名    
+    doc = documents.GetActiveDocument()
+    path = doc.GetDocumentPath()
+    name = doc.GetDocumentName()
+    # 将文件后缀改为.fbx
+    if name[-3:] != "fbx":
+        try:
+            index = -1
+            while name[index] != '.':
+                index -= 1 
+            name = name[:(index+1)]+"fbx"
             print "convert filetype to .fbx"
-        
-        path = os.path.join(path,name)
-        # 导出模型
-        if documents.SaveDocument(doc,path,c4d.SAVEDOCUMENTFLAGS_DONTADDTORECENTLIST,1026370):
-            print "export document to: " + path
-        else:
-            print "export failed"
+        except IndexError:
+            print "maybe you need to save your file first"
+            return
+    
+    path = os.path.join(path,name)
+    # 导出模型到原文件路径
+    if documents.SaveDocument(doc,path,c4d.SAVEDOCUMENTFLAGS_DONTADDTORECENTLIST,1026370):
+        print "export document to: " + path
+    else:
+        print "export failed"
 
-        c4d.EventAdd() 
-    if __name__=='__main__':
-        main()
+    c4d.EventAdd()    
+
+if __name__=='__main__':
+    main()
+
 ```
