--- a/markdown/3.md
+++ b/markdown/3.md
@@ -22,7 +22,12 @@
 > ~~操作说明：无~~
 >
 > ~~什么，你不知道按哪个键？一个个试过去吧~~
-
+> 
+> 游戏有bug? 有想法想反馈?
+>
+> 可以发邮件到abnsun@outlook.com
+>
+> ~~至于会不会看就不知道了~~
 #### ~~令人感觉幸福的一段代码：~~
 
 > 虽然是很简单的几句，没什么复杂的东西，实现的功能也仅仅是“保存文件”而已，但绑定到快捷键上之后，会让人产生一种Cinema4d与Unity无缝协作的感觉。~~虽然Unity兼容c4d的文件格式，但团队合作用c4d的格式果然还是不太方便。~~
