--- a/Presentation/项目介绍.md
+++ b/Presentation/项目介绍.md
@@ -1,10 +1,8 @@
 # 操作说明
 
-
->跳跃/与NPC进行对话       (键盘：空格或手柄：A）
->
->左右移动                (键盘：AD或手柄：左摇杆）
->
->增大物体重力            （键盘：E或手柄：X）
->
->旋转重力方向            （键盘：左右方向键或手柄LB，RB）
+按键 | 手柄 | 操作
+:------: | :------- |:-------
+A/D | 左摇杆   | 左右移动
+空格 | A | 跳跃/与NPC进行对话
+← / →  | LB / RB | 旋转重力方向
+E | X | 增大物体重力
